feat: update application configuration; remove unused properties, adjust Thymeleaf settings, and add new environment files for chapters 4-18